# spatialbench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: CLI_USAGE.md  adding_evals.md  graders.md  specification.md
evals/: README.md
evals/cell_typing/: xenium_kidney_typing.json
evals/clustering/: xenium_leiden.json
evals/differential_expression/: vizgen_de_temporal.json
evals/preprocessing/: xenium_normalization.json
evals/qc/: seeker_qc_basic.json
evals/spatial_analysis/: seeker_spatial_contiguity.json  vizgen_tissue_composition.json
evals_canonical/: manifest.json
evals_canonical/cell_typing/: merfish_merfish_brain_astrocyte_aging_markers_precision_recall.json  xenium_classify_pt_distribution_advanced.json
evals_canonical/clustering/: merfish_merfish_brain_clustering_astro2_vs_astro.json  visium_bone_clustering_bone_formation.json
evals_canonical/differential_expression/: seeker_ovary_mural_gc_atretic_follicle_markers.json
evals_canonical/dimensionality_reduction/: seeker_seeker_3x3_ovary_1hr_pc1_cell_populations.json
evals_canonical/normalization/: merfish_merfish_brain_log_zscore_gad2_mean.json
evals_canonical/qc/: xenium_xenium_qc_filter_min_umi_counts.json
evals_full/: README.md
examples/: run_with_minisweagent.py
results/: README.md  benchmark_results.json  results_by_platform.json  results_by_task.json
scripts/: benchmark_models.sh  cleanup_orphaned_processes.sh  compare_models.py
spatialbench/: __init__.py  cli.py  types.py
spatialbench/graders/: __init__.py  base.py  distribution.py  (+5 more)
(+8 files in other folders)
