[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialbench"
version = "0.1.0"
description = "A benchmark for AI agents on spatial biology analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Latch Bio", email = "kenny@latch.bio"}
]
keywords = ["spatial transcriptomics", "benchmark", "LLM", "AI agents", "biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "latch-eval-tools==0.1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
spatialbench = "spatialbench.cli:main"

[tool.setuptools.packages.find]
include = ["spatialbench*"]

[project.urls]
Homepage = "https://github.com/latchbio/spatialbench"
Documentation = "https://github.com/latchbio/spatialbench/tree/main/docs"
Repository = "https://github.com/latchbio/spatialbench"
